// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`object arrays > add to end (multiple) 1`] = `
[
  {
    "patch": {
      "id": "die-hard-iii",
      "insert": {
        "after": "characters[-1]",
        "items": [
          {
            "_key": "simon",
            "name": "Simon Gruber",
          },
          {
            "_key": "zeus",
            "name": "Zeus Carver",
          },
        ],
      },
    },
  },
]
`;

exports[`object arrays > add to end (single) 1`] = `
[
  {
    "patch": {
      "id": "die-hard-iii",
      "insert": {
        "after": "characters[-1]",
        "items": [
          {
            "_key": "simon",
            "name": "Simon Gruber",
          },
        ],
      },
    },
  },
]
`;

exports[`object arrays > change item 1`] = `
[
  {
    "patch": {
      "diffMatchPatch": {
        "characters[_key=="simon"].name": "@@ -5,8 +5,9 @@
 n Gr
-u
+%C3%BC
 ber
",
      },
      "id": "die-hard-iii",
    },
  },
]
`;

exports[`object arrays > remove from end (multiple) 1`] = `
[
  {
    "patch": {
      "id": "die-hard-iii",
      "unset": [
        "characters[_key=="simon"]",
        "characters[_key=="zeus"]",
      ],
    },
  },
]
`;

exports[`object arrays > remove from end (single) 1`] = `
[
  {
    "patch": {
      "id": "die-hard-iii",
      "unset": [
        "characters[_key=="zeus"]",
      ],
    },
  },
]
`;

exports[`object arrays > remove from middle (single) 1`] = `
[
  {
    "patch": {
      "id": "die-hard-iii",
      "unset": [
        "characters[_key=="zeus"]",
      ],
    },
  },
  {
    "patch": {
      "id": "die-hard-iii",
      "set": {
        "characters[1]._key": "zeus",
      },
    },
  },
  {
    "patch": {
      "diffMatchPatch": {
        "characters[1].name": "@@ -1,12 +1,11 @@
-Simon Grub
+Zeus Carv
 er
",
      },
      "id": "die-hard-iii",
    },
  },
]
`;
